# Unfall_Data_Exploration_Project

./: DataExploration.ipynb  README.md  TableBeschreibung.md  data_files_clean.ipynb  db_tables.md  pyproject.toml  test.ipynb  test_wichtig_wieder_entfernen.md
data/clean/: test.csv
data/raw/FARS_2012_National/: ACCIDENT.csv  CEVENT.CSV  DAMAGE.CSV  DISTRACT.CSV  DRIMPAIR.CSV  FACTOR.CSV  MANEUVER.CSV  MIACC.CSV  MIDRVACC.CSV  MIPER.CSV  NMCRASH.CSV  NMIMPAIR.CSV  NMPRIOR.CSV  PARKWORK.CSV  PERSON.CSV  SAFETYEQ.CSV  VEHICLE.CSV  VEVENT.CSV  VIOLATN.CSV  VISION.CSV  VSOE.CSV  vpicdecode.csv
data/raw/FARS_2013_National/: ACCIDENT.csv  CEVENT.CSV  DAMAGE.CSV  DISTRACT.CSV  DRIMPAIR.CSV  FACTOR.CSV  MANEUVER.CSV  MIACC.CSV  MIDRVACC.CSV  MIPER.CSV  NMCRASH.CSV  NMIMPAIR.CSV  NMPRIOR.CSV  PARKWORK.CSV  PERSON.CSV  SAFETYEQ.CSV  VEHICLE.CSV  VEVENT.CSV  VINDECODE.CSV  VIOLATN.CSV  VISION.CSV  VSOE.CSV  vpicdecode.csv
data/raw/FARS_2014_National/: ACCIDENT.csv  CEVENT.CSV  DAMAGE.CSV  DISTRACT.CSV  DRIMPAIR.CSV  FACTOR.CSV  MANEUVER.CSV  MIACC.CSV  MIDRVACC.CSV  MIPER.CSV  NMCRASH.CSV  NMIMPAIR.CSV  NMPRIOR.CSV  PARKWORK.CSV  PBTYPE.CSV  PERSON.CSV  SAFETYEQ.CSV  VEHICLE.CSV  VEVENT.CSV  VINDECODE.CSV  VIOLATN.CSV  VISION.CSV  VSOE.CSV  vpicdecode.csv
data/raw/FARS_2015_National/: Damage.csv  Distract.csv  DrImpair.csv  Factor.csv  Maneuver.csv  NMImpair.csv  NMPrior.csv  PBType.csv  SafetyEq.csv  VEvent.csv  VINDecode.csv  VSOE.csv  Violatn.csv  Vision.csv  accident.csv  cevent.csv  miacc.csv  midrvacc.csv  miper.csv  nmcrash.csv  parkwork.csv  person.csv  vehicle.csv  (+1 more)
(+48 files in other folders)
