[tool.poetry]
name = "raphael-kach-abgabe-ml"
version = "0.1.0"
description = "ML Project"
authors = ["raphaelkach <wi23146@lehre.dhbw-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
pulp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
